overflow issue not fixed. removed overflow hidden

--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -26,7 +26,6 @@ body {
     font-size: 4rem;
   }
   font-family: "Source Sans Pro", sans-serif;
-  overflow: hidden;
 }
 
 button {
